--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.32.0",
+    "framer-motion": "^11.3.8",
     "ky": "^1.4.0",
     "lucia": "^3.2.0",
     "lucide-react": "^0.402.0",
