--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "turbo": "next dev --turbo",
+    "turbo": "docker-compose up -d && next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
