feat: generate blurhashes for the images on upload and use it while loading

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tiptap/starter-kit": "^2.4.0",
     "@uploadthing/react": "^6.7.2",
     "arctic": "^1.9.1",
+    "blurhash": "^2.0.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -56,6 +57,7 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.13.2",
+    "use-next-blurhash": "^1.0.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
