feat: setup action to publish image to ghcr

--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -2,19 +2,12 @@
 name: deadspace-web
 services:
   web:
-    image: deadspace-web-ui
-    build:
-      context: .
-      dockerfile: Dockerfile
-      secrets:
-        - NEXT_PUBLIC_UPLOADTHING_APP_ID
-        - UPLOADTHING_SECRET
-        - DB_URL
-        - POSTGRES_DB
-        - POSTGRES_USER
-        - POSTGRES_PASSWORD
+    image: "ghcr.io/listlessbird/deadspace-web-ui:release"
+
     ports:
       - "3000:3000"
+    environment:
+      - NODE_ENV=production
     secrets:
       - NEXT_PUBLIC_UPLOADTHING_APP_ID
       - NEXT_PUBLIC_BASE_URL
@@ -26,26 +19,27 @@ services:
       - GOOGLE_AUTH_CLIENT_ID
       - GOOGLE_AUTH_CLIENT_SECRET
 
+secrets:
+  NEXT_PUBLIC_UPLOADTHING_APP_ID:
+    file: ./secrets/NEXT_PUBLIC_UPLOADTHING_APP_ID
+  UPLOADTHING_SECRET:
+    file: ./secrets/UPLOADTHING_SECRET
+  DB_URL:
+    file: ./secrets/DB_URL
+  POSTGRES_DB:
+    file: ./secrets/POSTGRES_DB
+  POSTGRES_USER:
+    file: ./secrets/POSTGRES_USER
+  POSTGRES_PASSWORD:
+    file: ./secrets/POSTGRES_PASSWORD
+  GOOGLE_AUTH_CLIENT_ID:
+    file: ./secrets/GOOGLE_AUTH_CLIENT_ID
+  GOOGLE_AUTH_CLIENT_SECRET:
+    file: ./secrets/GOOGLE_AUTH_CLIENT_SECRET
+  NEXT_PUBLIC_BASE_URL:
+    file: ./secrets/NEXT_PUBLIC_BASE_URL
+
 networks:
   default:
     name: deadspace-network
 
-secrets:
-  NEXT_PUBLIC_UPLOADTHING_APP_ID:
-    external: true
-  UPLOADTHING_SECRET:
-    external: true
-  DB_URL:
-    external: true
-  POSTGRES_DB:
-    external: true
-  POSTGRES_USER:
-    external: true
-  POSTGRES_PASSWORD:
-    external: true
-  GOOGLE_AUTH_CLIENT_ID:
-    external: true
-  GOOGLE_AUTH_CLIENT_SECRET:
-    external: true
-  NEXT_PUBLIC_BASE_URL:
-    external: true
