--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'release') }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
